---
source: tests/golden_tests.rs
input_file: tests/golden_tests/encode_pattern_match/var_only.bend
---
Scott
unchecked Foo: Any
(Foo) = λa λ* λc (c a)

unchecked main: Any
(main) = λ* Foo

NumScott
unchecked Foo: Any
(Foo) = λa λ* λc (c a)

unchecked main: Any
(main) = λ* Foo
